--- a/src/main/webapp/pages/project-create.html
+++ b/src/main/webapp/pages/project-create.html
@@ -10,67 +10,28 @@
     <link rel="stylesheet" href="css/multi-select.css" />
     <link rel="stylesheet" href="css/unicorn.main.css" />
     <link rel="stylesheet" href="css/unicorn.grey.css" class="skin-color" />
+
+    <script src="js/lib/angular.min.js"></script>
+    <script src="js/lib/excanvas.min.js"></script>
+    <script src="js/lib/jquery-3.1.1.min.js"></script>
+    <script src="js/lib/bootstrap-3.3.7.min.js"></script>
+    <script src="js/lib/jquery.flot.min.js"></script>
+    <script src="js/lib/jquery.flot.resize.min.js"></script>
+    <script src="js/lib/jquery.peity.min.js"></script>
+    <script src="js/lib/jquery-ui.custom.js"></script>
+    <script src="js/lib/fullcalendar.min.js"></script>
+    <script src="js/lib/unicorn.js"></script>
+    <script src="js/lib/unicorn.dashboard.js"></script>
+    <script src="js/lib/jquery.multi-select.js"></script>
+    <script src="js/lib/bootstrap-treeview.min.js"></script>
 </head>
-<body>
-
-
-<div id="header">
-    <h1><a>行政管理系统</a></h1>
-</div>
-
-<div id="sidebar">
-    <ul>
-        <li class="submenu">
-            <a href="#"><i class="icon icon-th-list"></i> <span>部门管理</span></a>
-            <ul>
-                <li><a href="department-overview.html">部门概览</a></li>
-                <li><a href="department-detail.html">部门明细</a></li>
-                <li><a>创建部门</a></li>
-            </ul>
-        </li>
-        <li class="submenu active open">
-            <a href="#"><i class="icon icon-th-list"></i> <span>项目管理</span></a>
-            <ul>
-                <li><a href="project-overview.html">项目概览</a></li>
-                <li class="active"><a href="project-create.html">创建项目</a></li>
-                <li><a href="project-detail.html">项目明细</a></li>
-            </ul>
-        </li>
-        <li class="submenu">
-            <a href="#"><i class="icon icon-th-list"></i> <span>人员管理</span></a>
-            <ul>
-                <li><a href="user-detail.html">人员查询</a></li>
-                <li><a href="user-create.html">添加员工</a></li>
-            </ul>
-        </li>
-        <li class="submenu">
-            <a href="#"><i class="icon icon-th-list"></i> <span>考勤管理</span> <span class="label">3</span></a>
-            <ul>
-                <li><a href="">请假申请</a></li>
-                <li><a href="">请假审批</a></li>
-            </ul>
-        </li>
-        <li class="submenu">
-            <a href="#"><i class="icon icon-th-list"></i> <span>会议管理</span> <span class="label">3</span></a>
-            <ul>
-                <li><a href="">我的会议</a></li>
-                <li><a href="">发起会议</a></li>
-            </ul>
-        </li>
-        <li class="submenu">
-            <a href="#"><i class="icon icon-th-list"></i> <span>物资管理</span> <span class="label">3</span></a>
-            <ul>
-                <li><a href="">物资申请</a></li>
-                <li><a href="">物资审批</a></li>
-            </ul>
-        </li>
-    </ul>
-
-</div>
-
+<body ng-app="projectCEApp" ng-controller="projectCECtrl">
+<div id="header" ng-include="'head.html'"></div>
+<div id="sidebar" ng-include="'sidebar.html'"></div>
 <div id="content">
     <div id="content-header">
-        <h1>创建项目</h1>
+        <h1 ng-if="isCreate">创建项目</h1>
+        <h1 ng-if="isEdit">编辑项目</h1>
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
@@ -87,20 +48,20 @@
                             <div class="control-group">
                                 <label class="control-label">项目名称</label>
                                 <div class="controls">
-                                    <input id="name" type="text" />
+                                    <input id="name" type="text" ng-model="project.name"/>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label class="control-label">所属部门</label>
+                                <label class="control-label" >所属部门</label>
                                 <div class="controls">
-                                    <select id="dpmSelect">
+                                    <select id="dpmSelect" ng-change="initPersons()" ng-model="project.department" ng-options="d.name for d in departments">
                                     </select>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label class="control-label">项目主管</label>
                                 <div class="controls">
-                                    <select id="ownerSelect">
+                                    <select id="ownerSelect" ng-model="project.owner" ng-options="u.displayName for u in users">
                                     </select>
                                 </div>
                             </div>
@@ -114,23 +75,23 @@
                             <div class="control-group">
                                 <label class="control-label">起始日期</label>
                                 <div class="controls">
-                                    <input id="startDate" type="text" />
+                                    <input id="startDate" type="text" ng-disabled="isEdit" ng-model="project.startDate"/>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label class="control-label">预期完成日期</label>
                                 <div class="controls">
-                                    <input id="endDate" type="text" />
+                                    <input id="endDate" type="text" ng-model="project.endDate"/>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label class="control-label">项目简介</label>
                                 <div class="controls">
-                                    <textarea id="introduce"></textarea>
+                                    <textarea id="introduce" ng-model="project.introduce"></textarea>
                                 </div>
                             </div>
                             <div class="form-actions">
-                                <button type="submit" class="btn btn-primary" onclick="sureBtn()">确定</button>
+                                <button type="submit" class="btn btn-primary" ng-click="projectCreate()">确定</button>
                             </div>
                         </form>
                     </div>
@@ -139,21 +100,6 @@
         </div>
     </div>
 </div>
-
-
-<script src="js/lib/angular.min.js"></script>
-<script src="js/lib/excanvas.min.js"></script>
-<script src="js/lib/jquery-3.1.1.min.js"></script>
-<script src="js/lib/bootstrap-3.3.7.min.js"></script>
-<script src="js/lib/jquery.flot.min.js"></script>
-<script src="js/lib/jquery.flot.resize.min.js"></script>
-<script src="js/lib/jquery.peity.min.js"></script>
-<script src="js/lib/jquery-ui.custom.js"></script>
-<script src="js/lib/fullcalendar.min.js"></script>
-<script src="js/lib/unicorn.js"></script>
-<script src="js/lib/unicorn.dashboard.js"></script>
-<script src="js/lib/jquery.multi-select.js"></script>
-<script src="js/lib/bootstrap-treeview.min.js"></script>
 <script src="js/util.js"></script>
 <script src="js/project-create.js"></script>
 </body>
