--- a/src/main/webapp/pages/project-detail.html
+++ b/src/main/webapp/pages/project-detail.html
@@ -30,8 +30,8 @@
     <div id="content-header">
         <h1>项目信息</h1>
         <div class="btn-group">
-            <!--data-toggle="modal" data-target="#myModal"-->
-            <a class="btn btn-primary" ng-href="project-create.html?companyId={{project.companyId}}&id={{project.project.id}}">编辑项目</a>
+            <a class="btn btn-navbar" ng-href="project-overview.html" style="margin-right: 5px">返回</a>
+            <a class="btn btn-primary" ng-href="project-create.html?companyId={{project.companyId}}&id={{project.id}}">编辑项目</a>
         </div>
     </div>
     <div class="container-fluid">
@@ -48,19 +48,19 @@
                         <form action="#" method="get" class="form-horizontal" style="z-index: 200">
                             <p class="amount-word">
                                 项目名称:
-                                <span id="name">{{project.project.text}}</span>
+                                <span id="name">{{project.name}}</span>
                             </p>
                             <p class="amount-word">
                                 所属部门:
-                                <span><a ng-href="department-detail.html?companyId={{project.companyId}}&id={{project.dpm.id}}" id="dpm">{{project.dpm.text}}</a></span>
+                                <span><a ng-href="department-detail.html?companyId={{project.companyId}}&id={{project.department.id}}" id="dpm">{{project.department.name}}</a></span>
                             </p>
                             <p class="amount-word">
                                 项目主管:
-                                <span><a ng-href="user-detail.html?companyId={{project.companyId}}&id={{project.owner.id}}" id="owner">{{project.owner.text}}</a></span>
+                                <span><a ng-href="user-detail.html?companyId={{project.companyId}}&id={{project.owner.name}}" id="owner">{{project.owner.displayName}}</a></span>
                             </p>
                             <p class="amount-word">
                                 项目组员：
-                                <a style="margin-left: 5px" ng-repeat="p in project.persons" ng-href="user-detail.html?companyId={{project.companyId}}&id={{p.id}}">{{p.text}}</a>
+                                <a style="margin-left: 5px" ng-repeat="p in project.persons" ng-href="user-detail.html?companyId={{project.companyId}}&id={{p.id}}">{{p.displayName}}</a>
                             </p>
                             <p class="amount-word">
                                 起始日期:
@@ -71,8 +71,12 @@
                                 <span id="endDate">{{project.endDate}}</span>
                             </p>
                             <p class="amount-word">
+                                预算费用(元)：
+                                <span id="budget">{{project.budget}}</span>
+                            </p>
+                            <p class="amount-word">
                                 项目状态：
-                                <span id="status">{{project.status}}</span>
+                                <span id="status" ng-style="{'color': selectStatusColor(project.status) }">{{transStatus(project.status)}}</span>
                             </p>
                             <p class="amount-word">
                                 会议记录：
@@ -101,80 +105,5 @@
 
 <script src="js/util.js"></script>
 <script src="js/project-detail.js"></script>
-<div class="modal fade" style="width: 600px" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                    &times;
-                </button>
-                <h4 class="modal-title" id="myModalLabel">
-                    修改项目信息
-                </h4>
-            </div>
-            <div class="modal-body">
-                <form action="#" method="get" class="form-horizontal">
-                <div class="control-group">
-                    <label class="control-label">项目ID</label>
-                    <div class="controls">
-                        <input ng-disabled="true" ng-model="editInfo.project.id" type="text" />
-                    </div>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">项目名称</label>
-                    <div class="controls">
-                        <input ng-model="editInfo.project.text" type="text" />
-                    </div>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">所属部门</label>
-                    <div class="controls">
-                        <input ng-disabled="true" ng-model="editInfo.dpm.text" type="text" />
-                    </div>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">项目主管</label>
-                    <div class="controls">
-                        <select ng-model="editInfo.owner" ng-options="p.text for p in users"></select>
-                    </div>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">项目人员</label>
-                    <div class="controls">
-                        <select multiple="multiple" id="editPersons">
-                        </select>
-                    </div>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">起始日期</label>
-                    <div class="controls">
-                        <input type="text" ng-model="editInfo.startDate" ng-disabled="true"/>
-                    </div>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">预期完成日期</label>
-                    <div class="controls">
-                        <input id="editEndDate" type="text"  ng-model="editInfo.endDate" />
-                    </div>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">项目简介</label>
-                    <div class="controls">
-                        <textarea id="introduce" ng-modal="editInfo.introduce"></textarea>
-                    </div>
-                </div>
-            </form>
-            </div>
-
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
-                </button>
-                <button type="button" class="btn btn-primary">
-                    提交更改
-                </button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
-</div>
 </body>
 </html>
