--- a/src/main/webapp/pages/sidebar.html
+++ b/src/main/webapp/pages/sidebar.html
@@ -11,7 +11,7 @@
         <li class="submenu" id="project_li">
             <a href="#"><i class="icon icon-th-list"></i> <span>项目管理</span></a>
             <ul>
-                <li><a href="project-overview.html">项目概览</a></li>
+                <li id="project_overview_li"><a href="project-overview.html">项目概览</a></li>
                 <li><a href="project-create.html">创建项目</a></li>
                 <li id="project_detail_li"><a href="project-detail.html">项目明细</a></li>
             </ul>
