--- a/src/main/webapp/pages/sidebar.html
+++ b/src/main/webapp/pages/sidebar.html
@@ -23,18 +23,18 @@
                 <li><a href="user-create.html">添加员工</a></li>
             </ul>
         </li>
-        <li class="submenu">
+        <li class="submenu" id="meeting-li">
             <a href="#"><i class="icon icon-th-list"></i> <span>会议管理</span> <span class="label">3</span></a>
             <ul>
-                <li><a href="">我的会议</a></li>
-                <li><a href="">发起会议</a></li>
+                <li id="meeting-overview-li"><a href="meeting-overview.html">我的会议</a></li>
+                <li id="meeting-create-li"><a href="meeting-create.html">发起会议</a></li>
             </ul>
         </li>
-        <li class="submenu">
+        <li class="submenu" id="material-li">
             <a href="#"><i class="icon icon-th-list"></i> <span>物资管理</span> <span class="label">3</span></a>
             <ul>
-                <li><a href="">物资申请</a></li>
-                <li><a href="">物资审批</a></li>
+                <li id="material-create-li"><a href="material-create.html">物资申请</a></li>
+                <li id="material-overview-li"><a href="material-overview.html">物资概览</a></li>
             </ul>
         </li>
     </ul>
