--- a/src/main/webapp/pages/meeting-overview.html
+++ b/src/main/webapp/pages/meeting-overview.html
@@ -25,13 +25,13 @@
     <script src="js/lib/unicorn.dashboard.js"></script>
     <script src="js/lib/bootstrap-treeview.min.js"></script>
 </head>
-<body ng-app="projectOverviewApp" ng-controller="projectOverviewCtrl">
+<body ng-app="MOApp" ng-controller="MOCtrl">
 <div id="header" ng-include="'head.html'"></div>
 <div id="sidebar" ng-include="'sidebar.html'"></div>
 
 <div id="content">
     <div id="content-header">
-        <h1>项目概览</h1>
+        <h1>我的会议</h1>
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
@@ -41,22 +41,24 @@
 								<span class="icon">
 									<i class="icon-align-justify"></i>
 								</span>
-                        <h5>项目列表</h5>
+                        <h5>会议列表</h5>
                     </div>
                     <div class="widget-content nopadding">
                         <table class="table table-striped table-bordered">
                             <thead>
                             <tr>
-                                <th>项目名称</th>
-                                <th>所属部门</th>
-                                <th>项目主管</th>
-                                <th>项目状态</th>
+                                <th>会议名称</th>
+                                <th>所属项目</th>
+                                <th>会议时间</th>
+                                <th>会议地点</th>
+                                <th>发起人</th>
                             </tr>
-                            <tr ng-repeat="p in projects">
-                                <td><a ng-href="project-detail.html?companyId={{p.companyId}}&id={{p.id}}">{{ p.name }}</a></td>
-                                <td><a ng-href="department-detail.html?companyId={{p.companyId}}&id={{p.department.id}}">{{ p.department.name }}</a></td>
-                                <td><a ng-href="user-detail.html?companyId={{p.companyId}}&id={{p.owner.name}}">{{ p.owner.displayName }}</a></td>
-                                <td><span ng-style="{'color': selectStatusColor(p.status) }">{{ transStatus(p.status) }}</span></td>
+                            <tr ng-repeat="m in meetings">
+                                <td><a ng-href="meeting-detail.html?companyId={{m.companyId}}&id={{m.id}}&&preUrl=meeting-overview.html">{{ m.name }}</a></td>
+                                <td><a ng-href="project-detail.html?companyId={{m.companyId}}&id={{m.projectId}}">{{ m.projectName }}</a></td>
+                                <td>{{ m.time }}</td>
+                                <td>{{ m.location }}</td>
+                                <td><a ng-href="user-detail.html?companyId={{m.companyId}}&id={{m.ownerId}}">{{m.ownerName}}</a></td>
                             </tr>
                             </thead>
                             <tbody id="tableBody">
@@ -69,6 +71,6 @@
     </div>
 </div>
 <script src="js/util.js"></script>
-<script src="js/project-overview.js"></script>
+<script src="js/meeting-overview.js"></script>
 </body>
 </html>
