--- a/src/main/webapp/pages/project-detail.html
+++ b/src/main/webapp/pages/project-detail.html
@@ -30,7 +30,7 @@
     <div id="content-header">
         <h1>项目信息</h1>
         <div class="btn-group">
-            <a class="btn btn-navbar" ng-href="project-overview.html" style="margin-right: 5px">返回</a>
+            <a class="btn btn-navbar" onclick="javascript:history.back(-1);" style="margin-right: 5px">返回</a>
             <a class="btn btn-primary" ng-href="project-create.html?companyId={{project.companyId}}&id={{project.id}}">编辑项目</a>
         </div>
     </div>
@@ -78,24 +78,78 @@
                                 项目状态：
                                 <span id="status" ng-style="{'color': selectStatusColor(project.status) }">{{transStatus(project.status)}}</span>
                             </p>
-                            <p class="amount-word">
-                                会议记录：
-                                <span id="meeting">
-                                <a href="">项目启动</a>
-                                <a href="">项目方案评审</a>
-                                <a href="">项目进展报告</a>
-                                <a href="">项目总结</a>
-                            </span>
-                            </p>
-                            <p class="amount-word">
-                                物资使用记录：
-                                <span id="wuzi">
-                                <a href="">服务器3台</a>
-                                <a href="">2T硬盘</a>
-                                <a href="">NVIDIA-M60显卡租用</a>
-                            </span>
-                            </p>
                         </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="widget-box">
+                    <div class="widget-title">
+                            <span class="icon">
+                                <i class="icon-align-justify"></i>
+                            </span>
+                        <h5>会议记录</h5>
+                    </div>
+                    <div class="widget-content nopadding">
+
+                        <table class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>会议名称</th>
+                                <th>会议时间</th>
+                                <th>会议地点</th>
+                                <th>发起人</th>
+                            </tr>
+                            <tr ng-repeat="m in meetings">
+                                <td><a ng-href="meeting-detail.html?companyId={{m.companyId}}&id={{m.id}}">{{m.name}}</a></td>
+                                <td>{{m.time}}</td>
+                                <td>{{m.location}}</td>
+                                <td>{{m.ownerName}}</td>
+                            </tr>
+                            </thead>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="widget-box">
+                    <div class="widget-title">
+                            <span class="icon">
+                                <i class="icon-align-justify"></i>
+                            </span>
+                        <h5>物资详情</h5>
+                    </div>
+                    <div class="widget-content nopadding">
+
+                        <table class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>名称</th>
+                                <th>数量</th>
+                                <th>使用时间</th>
+                                <th>审批人</th>
+                                <th>状态</th>
+                            </tr>
+                            <tr ng-repeat="m in materials">
+                                <td><a ng-href="material-detail.html?companyId={{m.companyId}}&id={{m.id}}">{{m.name}}</a></td>
+                                <td>{{m.num}}</td>
+                                <td>{{m.time}}</td>
+                                <td>{{m.exUserName}}</td>
+                                <td>{{transMaterialStatus(m.status)}}</td>
+                            </tr>
+                            </thead>
+                            <tbody id="tableBody">
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
