第一轮优化

--- a/src/main/webapp/pages/department-overview.html
+++ b/src/main/webapp/pages/department-overview.html
@@ -24,7 +24,7 @@
     <script src="js/util.js"></script>
     <script src="js/department-overview.js"></script>
 </head>
-<body ng-app="">
+<body ng-app="DepartmentOAPP" ng-controller="DepartmentOCtrl">
 <div id="header" ng-include="'head.html'"></div>
 <div id="sidebar" ng-include="'sidebar.html'"></div>
 <div id="content">
