--- a/src/main/webapp/pages/material-overview.html
+++ b/src/main/webapp/pages/material-overview.html
@@ -99,11 +99,11 @@
                                 <td>{{e.time}}</td>
                                 <td>{{transStatus(e.status)}}</td>
                                 <td>
-                                    <a class="tip-top" data-original-title="通过">
-                                        <i class="icon-ok"  ng-click="pass(e.id)"></i>
+                                    <a class="tip-top" data-original-title="通过" ng-click="pass(e.id)" href="#">
+                                        通过
                                     </a>
-                                    <a class="tip-top" data-original-title="拒绝">
-                                        <i class="icon-stop"  ng-click="stop(e.id)"></i>
+                                    <a class="tip-top" data-original-title="拒绝" ng-click="stop(e.id)" href="#">
+                                        拒绝
                                     </a>
                                 </td>
                             </tr>
