--- a/src/main/webapp/pages/department-create.html
+++ b/src/main/webapp/pages/department-create.html
@@ -24,7 +24,7 @@
     <script src="js/util.js"></script>
     <script src="js/department-create.js"></script>
 </head>
-<body ng-app="">
+<body ng-app="DepartmentCApp" ng-controller="DepartmentCCtrl">
 <div id="header" ng-include="'head.html'"></div>
 <div id="sidebar" ng-include="'sidebar.html'"></div>
 
@@ -71,7 +71,7 @@
                                 </div>
                             </div>
                             <div class="form-actions">
-                                <button type="submit" class="btn btn-primary" onclick="sureBtn()">确定</button>
+                                <button type="submit" class="btn btn-primary" ng-click="sureBtn()">确定</button>
                             </div>
                         </form>
                     </div>
