--- a/src/main/webapp/pages/project-create.html
+++ b/src/main/webapp/pages/project-create.html
@@ -54,13 +54,15 @@
                             <div class="control-group">
                                 <label class="control-label" >所属部门</label>
                                 <div class="controls">
-                                    <input id="department" type="text" ng-disabled="isEdit" ng-model="project.department.name"/>
+                                    <select id="department" type="text" ng-disabled="isEdit" ng-model="project.department" ng-options="d.name for d in departments">
+                                    </select>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label class="control-label">项目主管</label>
                                 <div class="controls">
-                                    <input id="owner" type="text" ng-disabled="isEdit" ng-model="project.owner.displayName"/>
+                                    <select id="owner" type="text" ng-disabled="isEdit" ng-model="project.owner" ng-options="u.displayName for u in users">
+                                    </select>
                                 </div>
                             </div>
                             <div class="control-group">
