--- a/src/main/webapp/pages/sidebar.html
+++ b/src/main/webapp/pages/sidebar.html
@@ -4,16 +4,14 @@
             <a href="#"><i class="icon icon-th-list"></i> <span>部门管理</span></a>
             <ul>
                 <li id="department_overview_li" ><a href="department-overview.html">部门概览</a></li>
-                <li id="department_detail_li"><a href="department-detail.html">部门明细</a></li>
-                <li id="department_create_li"><a>创建部门</a></li>
+                <li id="department_create_li"><a href="department-create.html">创建部门</a></li>
             </ul>
         </li>
         <li class="submenu" id="project_li">
             <a href="#"><i class="icon icon-th-list"></i> <span>项目管理</span></a>
             <ul>
                 <li id="project_overview_li"><a href="project-overview.html">项目概览</a></li>
-                <li><a href="project-create.html">创建项目</a></li>
-                <li id="project_detail_li"><a href="project-detail.html">项目明细</a></li>
+                <li id="project_create_li"><a href="project-create.html">创建项目</a></li>
             </ul>
         </li>
         <li class="submenu">
@@ -24,14 +22,14 @@
             </ul>
         </li>
         <li class="submenu" id="meeting-li">
-            <a href="#"><i class="icon icon-th-list"></i> <span>会议管理</span> <span class="label">3</span></a>
+            <a href="#"><i class="icon icon-th-list"></i> <span>会议管理</span></a>
             <ul>
                 <li id="meeting-overview-li"><a href="meeting-overview.html">我的会议</a></li>
                 <li id="meeting-create-li"><a href="meeting-create.html">发起会议</a></li>
             </ul>
         </li>
         <li class="submenu" id="material-li">
-            <a href="#"><i class="icon icon-th-list"></i> <span>物资管理</span> <span class="label">3</span></a>
+            <a href="#"><i class="icon icon-th-list"></i> <span>物资管理</span></a>
             <ul>
                 <li id="material-create-li"><a href="material-create.html">物资申请</a></li>
                 <li id="material-overview-li"><a href="material-overview.html">物资概览</a></li>
