项目优化第二轮，分离项目创建和项目编辑

--- a/src/main/webapp/pages/project-detail.html
+++ b/src/main/webapp/pages/project-detail.html
@@ -31,7 +31,7 @@
         <h1>项目信息</h1>
         <div class="btn-group">
             <a class="btn btn-navbar" onclick="javascript:history.back(-1);" style="margin-right: 5px">返回</a>
-            <a class="btn btn-primary" ng-href="project-create.html?companyId={{project.companyId}}&id={{project.id}}">编辑项目</a>
+            <a class="btn btn-primary" ng-href="project-edit.html?companyId={{project.companyId}}&id={{project.id}}">编辑项目</a>
         </div>
     </div>
     <div class="container-fluid">
