优化测试第三轮，添加用户角色，删除部长选择

--- a/src/main/webapp/pages/department-detail.html
+++ b/src/main/webapp/pages/department-detail.html
@@ -56,10 +56,10 @@
                                 上级部门:
                                 <span><a href="" id="parentId">上级部门</a></span>
                             </p>
-                            <p class="amount-word">
-                                部门主管:
-                                <span><a href="" id="ownerId">部门主管</a></span>
-                            </p>
+                            <!--<p class="amount-word">-->
+                                <!--部门主管:-->
+                                <!--<span><a href="" id="ownerId">部门主管</a></span>-->
+                            <!--</p>-->
                             <p class="amount-word">
                                 部门简介:
                                 <span id="introduce">部门简介</span>
