--- a/src/main/webapp/pages/department-create.html
+++ b/src/main/webapp/pages/department-create.html
@@ -57,13 +57,13 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="control-group">
-                                <label class="control-label">部门主管</label>
-                                <div class="controls">
-                                    <select id="ownerSelect">
-                                    </select>
-                                </div>
-                            </div>
+                            <!--<div class="control-group">-->
+                                <!--<label class="control-label">部门主管</label>-->
+                                <!--<div class="controls">-->
+                                    <!--<select id="ownerSelect">-->
+                                    <!--</select>-->
+                                <!--</div>-->
+                            <!--</div>-->
                             <div class="control-group">
                                 <label class="control-label">部门简介</label>
                                 <div class="controls">
