第三轮优化，部门详细信息添加人员列表，修复编辑项目状态失败

--- a/src/main/webapp/pages/project-edit.html
+++ b/src/main/webapp/pages/project-edit.html
@@ -87,7 +87,7 @@
                                 <div class="controls">
                                     <select id="status" ng-model="project.status">
                                         <option ng-selected='project.status == "RUN"' value="run">执行中</option>
-                                        <option ng-selected='project.status == "DEPLAY"' value="deplay">延期</option>
+                                        <option ng-selected='project.status == "DELAY"' value="delay">延期</option>
                                         <option ng-selected='project.status == "END"' value="end">完结</option>
                                         <option ng-selected='project.status == "FORCESTOP"' value="forcestop">异常终止</option>
                                     </select>
