--- a/src/main/webapp/pages/user-create.html
+++ b/src/main/webapp/pages/user-create.html
@@ -52,7 +52,7 @@
                             <div class="control-group">
                                 <label class="control-label">角色</label>
                                 <div class="controls">
-                                    <select id="role" ng-model="project.status">
+                                    <select id="role">
                                         <option value="admin">企业管理员</option>
                                         <option value="departmentadmin">企业部门管理员</option>
                                         <option value="materialadmin">企业物资管理员</option>
