--- a/src/main/webapp/pages/department-detail.html
+++ b/src/main/webapp/pages/department-detail.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/unicorn.main.css" />
     <link rel="stylesheet" href="css/unicorn.grey.css" class="skin-color" />
 
-    <script src="js/lib/angular.min.js"></script>
+
     <script src="js/lib/excanvas.min.js"></script>
     <script src="js/lib/jquery-3.1.1.min.js"></script>
     <script src="js/lib/bootstrap-3.3.7.min.js"></script>
@@ -21,10 +21,11 @@
     <script src="js/lib/unicorn.js"></script>
     <script src="js/lib/unicorn.dashboard.js"></script>
     <script src="js/lib/bootstrap-treeview.min.js"></script>
-    <script src="js/util.js"></script>
-    <script src="js/department-detail.js"></script>
+    <script src="js/lib/angular.min.js"></script>
+
 </head>
-<body ng-app="">
+<body ng-app="departmentDApp" ng-controller="departmentDCtrl">
+<!--departmentDApp" ng-controller="departmentDCtrl"-->
 
 
 <div id="header" ng-include="'head.html'"></div>
@@ -70,6 +71,43 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="widget-box">
+                    <div class="widget-title">
+                            <span class="icon">
+                                <i class="icon-align-justify"></i>
+                            </span>
+                        <h5>部门成员</h5>
+                    </div>
+                    <div class="widget-content nopadding">
+
+                        <table class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>姓名</th>
+                                <th>身份证号码</th>
+                                <th>工号</th>
+                                <th>角色</th>
+                            </tr>
+                            <tr ng-repeat="p in persons">
+                                <td><a ng-href="user-detail.html?companyId={{p.companyId}}&id={{p.name}}">{{p.displayName}}</a></td>
+                                <td>{{p.name}}</td>
+                                <td>{{p.workNum}}</td>
+                                <td>{{transRole(p.role)}}</td>
+                            </tr>
+                            </thead>
+                            <tbody id="tableBody">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<script src="js/util.js"></script>
+<script src="js/department-detail.js"></script>
 </body>
 </html>
