--- a/src/main/webapp/pages/project-edit.html
+++ b/src/main/webapp/pages/project-edit.html
@@ -67,7 +67,7 @@
                             <div class="control-group">
                                 <label class="control-label">项目组员</label>
                                 <div class="controls">
-                                    <a style="margin-left: 5px" ng-repeat="p in project.persons" ng-href="user-detail.html?companyId={{project.companyId}}&id={{p.id}}">{{p.displayName}}</a>
+                                    <a style="margin-left: 5px" ng-repeat="p in project.persons" ng-href="user-detail.html?companyId={{project.companyId}}&id={{p.name}}">{{p.displayName}}</a>
                                 </div>
                             </div>
                             <div class="control-group">
