修复项目概览导航栏不可用BUG

--- a/src/main/webapp/pages/project-overview.html
+++ b/src/main/webapp/pages/project-overview.html
@@ -7,24 +7,44 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/jquery-ui.css" />
-    <link rel="stylesheet" href="css/fullcalendar.css" />
+    <link rel="stylesheet" href="css/multi-select.css" />
     <link rel="stylesheet" href="css/unicorn.main.css" />
     <link rel="stylesheet" href="css/unicorn.grey.css" class="skin-color" />
 
+    <script src="js/lib/angular.min.js"></script>
     <script src="js/lib/excanvas.min.js"></script>
-
+    <script src="js/lib/jquery-3.1.1.min.js"></script>
     <script src="js/lib/bootstrap-3.3.7.min.js"></script>
     <script src="js/lib/jquery.flot.min.js"></script>
     <script src="js/lib/jquery.flot.resize.min.js"></script>
     <script src="js/lib/jquery.peity.min.js"></script>
     <script src="js/lib/jquery-ui.custom.js"></script>
-    <script src="js/lib/jquery.blockUI.js"></script>
     <script src="js/lib/fullcalendar.min.js"></script>
     <script src="js/lib/unicorn.js"></script>
     <script src="js/lib/unicorn.dashboard.js"></script>
+    <script src="js/lib/jquery.multi-select.js"></script>
     <script src="js/lib/bootstrap-treeview.min.js"></script>
-    <script src="js/lib/angular.min.js"></script>
-    <script src="js/lib/jquery-3.1.1.min.js"></script>
+
+    <!--<link rel="stylesheet" href="css/bootstrap.min.css" />-->
+    <!--<link rel="stylesheet" href="css/bootstrap-responsive.min.css" />-->
+    <!--<link rel="stylesheet" href="css/jquery-ui.css" />-->
+    <!--<link rel="stylesheet" href="css/fullcalendar.css" />-->
+    <!--<link rel="stylesheet" href="css/unicorn.main.css" />-->
+    <!--<link rel="stylesheet" href="css/unicorn.grey.css" class="skin-color" />-->
+
+    <!--<script src="js/lib/jquery-3.1.1.min.js"></script>-->
+    <!--<script src="js/lib/excanvas.min.js"></script>-->
+    <!--<script src="js/lib/bootstrap-3.3.7.min.js"></script>-->
+    <!--<script src="js/lib/jquery.flot.min.js"></script>-->
+    <!--<script src="js/lib/jquery.flot.resize.min.js"></script>-->
+    <!--<script src="js/lib/jquery.peity.min.js"></script>-->
+    <!--<script src="js/lib/jquery-ui.custom.js"></script>-->
+    <!--<script src="js/lib/jquery.blockUI.js"></script>-->
+    <!--<script src="js/lib/fullcalendar.min.js"></script>-->
+    <!--<script src="js/lib/unicorn.js"></script>-->
+    <!--<script src="js/lib/unicorn.dashboard.js"></script>-->
+    <!--<script src="js/lib/bootstrap-treeview.min.js"></script>-->
+    <!--<script src="js/lib/angular.min.js"></script>-->
 
 </head>
 <body ng-app="projectOverviewApp" ng-controller="projectOverviewCtrl">
@@ -70,6 +90,7 @@
         </div>
     </div>
 </div>
+
 <script src="js/util.js"></script>
 <script src="js/project-overview.js"></script>
 </body>
